--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -12,6 +12,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dipatch:
 
 env:
   # Use docker.io for Docker Hub if empty
