--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -12,7 +12,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dipatch:
+  workflow_dispatch:
 
 env:
   # Use docker.io for Docker Hub if empty
